test/runnable/extra-files/gdb15729.d
import lib15729;

void main()
{
    test1();
    test2();
}
