test/fail_compilation/fail76.d
alias main a;
alias void a;

void main()
{
    a;
}
